# sqllmcg

./: Cargo.toml  README.md  config.json
src/: main.rs
src/models/: args.rs  config.rs  mod.rs  ollama.rs  sonarqube.rs
