[package]
name = "stage_project"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.75"
